--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 bottle==0.12.18
 bottle-websocket==0.2.9
+certifi==2021.5.30
 cffi==1.14.3
+chardet==4.0.0
+colorama==0.4.4
+configparser==4.0.2
+crayons==0.4.0
 docopt==0.6.2
 Eel==0.12.4
 future==0.18.2
 gevent==20.9.0
 gevent-websocket==0.10.1
 greenlet==0.4.17
+idna==2.10
 Jinja2==2.11.2
 lxml==4.6.1
 MarkupSafe==1.1.1
 pycparser==2.20
+requests==2.25.1
+selenium==3.141.0
+urllib3==1.26.2
+webdriver-manager==2.4.0
 whichcraft==0.6.1
 zope.event==4.5.0
 zope.interface==5.1.2
